--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -2,4 +2,6 @@
 <p>倉儲:<a href="https://github.com/mdewcm2023/site-41023316">https://github.com/mdewcm2023/site-41023316</a></p>
 <p>網站:<a href="https://mdewcm2023.github.io/site-41023316">https://mdewcm2023.github.io/site-41023316</a></p>
 <h1>權限:</h1>
+<p>近端倉儲的設定檔案: 倉儲目錄下 .git中的 config, 代表倉儲的 configuration file (設定檔案)</p>
+<h1>w13</h1>
 <p></p>
